[workspace]
resolver = "2"
members = [
    "crates/optx-core",
    "crates/optx-rules",
    "crates/optx-substrait",
    "crates/optx-server",
]

[workspace.dependencies]
substrait = { version = "0.46", features = ["serde"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ordered-float = { version = "4", features = ["serde"] }

[workspace.package]
edition = "2021"
version = "0.1.0"
